[tool.poetry]
name = "load_tests"
version = "0.1.0"
description = "Load testing API using Locust"
authors = ["Ian Westcott <iwestcott@mbta.com>"]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^1.5.3"
flake8 = "^3.9.2"
black = "^21.5b2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
